--- a/package.json
+++ b/package.json
@@ -1,33 +1,16 @@
 {
-  "author": "Zachry Baker",
+  "author": "Wei Wang",
   "bugs": {
-    "url": "https://github.com/zachrybaker/ra-data-rest-client/issues"
+    "url": "https://github.com/onlywei/ra-data-rest/issues"
   },
-  "bundleDependencies": false,
   "dependencies": {
-    "query-string": "^5.1.1",
-    "ra-core": "^3.8.5"
+    "query-string": "^9.1.0"
   },
   "deprecated": false,
-  "description": "Extends ra-data-simple-rest with the abilty to work with resources that do not use 'id' as their unique identifier property name.",
+  "description": "Better ra-data-simple-rest",
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "@types/react": "^16.9.49",
-    "connected-react-router": "^6.8.0",
-    "cross-env": "^5.2.0",
-    "final-form": "^4.20.1",
-    "immutable": "^4.0.0-rc.12",
-    "jest": "^26.4.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-final-form": "^6.5.1",
-    "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "rimraf": "^2.6.3",
-    "seamless-immutable": "^7.1.4"
+    "ra-core": "^4.16.20",
+    "typescript": "^5.5.4"
   },
   "files": [
     "*.md",
@@ -35,10 +18,10 @@
     "esm",
     "src"
   ],
-  "homepage": "https://github.com/zachrybaker/ra-data-rest-client#readme",
+  "homepage": "https://github.com/onlywei/ra-data-rest#readme",
   "keywords": [
     "ra-data-simple-rest",
-    "ra-data-rest-client",
+    "ra-data-rest",
     "rest",
     "client",
     "react-admin"
@@ -46,20 +29,20 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "name": "ra-data-rest-client",
+  "name": "ra-data-rest",
   "peerDependencies": {
-    "ra-core": "^3.0.0"
+    "ra-core": "^4.16.20"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zachrybaker/ra-data-rest-client.git"
+    "url": "git+https://github.com/onlywei/ra-data-rest.git"
   },
   "scripts": {
-    "build": "yarn run build-cjs && yarn run build-esm",
-    "build-cjs": "rimraf ./lib && tsc",
-    "build-esm": "rimraf ./esm && tsc --outDir esm --module es2015",
+    "build": "npm run build-cjs && npm run build-esm",
+    "build-cjs": "rm -rf ./lib && tsc",
+    "build-esm": "rm -rf ./esm && tsc --outDir esm --module es2015",
     "watch": "tsc --outDir esm --module es2015 --watch"
   },
   "sideEffects": false,
-  "version": "1.1.1"
+  "version": "1.0.0"
 }
